# RemoteControl

./: .gitignore  CMakeLists.txt  FindKinRemoteControl.cmake
Source/: CMakeLists.txt
Source/Client/: CMakeLists.txt  RCClient.cpp  RCClient.h  RunningTC.h
Source/CommonStruct/: CMakeLists.txt  CommonDefine.h  main.cpp
Source/Example/: CMakeLists.txt  eClient.cpp  eMaster.cpp  eServer.cpp
Source/RCMaster/: CMakeLists.txt  RCMaster.cpp  RCMaster.h
Source/Server/: CMakeLists.txt  RCServer.cpp  RCServer.h
Source/webcode/: CMakeLists.txt
Source/webcode/Source/Example/: InnerScript.js  ShellIndex.html  WapSdl.cpp  main.cpp
Source/webcode/Source/Example/DependJs/: MouseKeyboardEvent.js  RCConfigure.js  SocketClient.js
Source/webcode/embuild/: CMakeCache.txt  Makefile  cmake_install.cmake
Source/webcode/embuild/Source/: Makefile  cmake_install.cmake
Source/webcode/embuild/Source/Example/: Makefile  cmake_install.cmake
Source/webcode/libs/pkgconfig/: libswscale.pc
include/libavutil/: ffversion.h
libs/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
libs/pkgconfig/: libavcodec.pc  libavutil.pc
webcode/: CMakeLists.txt
webcode/Source/Example/: CMakeLists.txt  JsFunctions.h  WapFFmpeg.cpp  WapFFmpeg.h  WapSdl.h
webcode/Source/libavutil/: ffversion.h
webcode/embuild/: Makefile  cmake_install.cmake
webcode/embuild/Source/: Makefile
webcode/embuild/Source/Example/: Makefile
